--- a/src/styles/global/_global.css
+++ b/src/styles/global/_global.css
@@ -1,9 +1,34 @@
+/* Selecciona la raíz del documento (equivalente a <html>) */
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  color: var(--primary-color);
+}
+
+/* Estilos predeterminados para el modo claro */
+body {
+  background-color: var(--primary-color);;
+  color: var(--secondary-color);
+}
+
+/* Estilos para el modo oscuro */
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+  }
 }
 
 /* .logo {
@@ -40,4 +65,70 @@ body {
 
 .read-the-docs {
   color: #888;
+} */
+
+
+/* Estilos generales */
+
+
+/* a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+} */
+
+/* Selecciona contenedor principal de react */
+/* #root { */
+/* height: 100dvh; */
+/* max-width: 1280px; */
+/* margin: 0 auto; */
+/* text-align: center; */
+/* background-color: blue; */
+/* } */
+
+/* body {
+  margin: 0;
+  width: 100%;
+  min-width: 320px;
+  min-height: 100vh;
 } */
